--- a/blog.html
+++ b/blog.html
@@ -513,6 +513,234 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://middlepot.com/img/10.png"/></center><br><br>
+<font size = 1><font color="#CBBBB1">
+<center>october . 31 . 2022</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub>🎃</sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+happy halloween !!!
+i hope you had lots of fun, ate lots of yummy sweets ..
+and didn't forget to brush your teeth <sub>🦷</sub>
+my days were spent as usual : playing online games events, listening to "dancing christmas in the 13th month" , watching coraline, and eating dark chocolate <font color="#d3a5a5" style="font-size:11px;">♡</font>
++ of course, this year, just like the last, i was also working my hardest to finish the <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> halloween event and fixing bugs that were found in the way.
+i'm glad to say everything turned out okay in the end, and this shall continue for many years to come !
+( i just hope not the bugs .. but well, that's part of the process )
+
+besides halloween, this month was.. particularly harsh ... <sub>🩹</sub>
+one of my cats got hospitalized, and unfortunately she passed away a few days later. she was 16 years old, but she has always been healthy, so it was all very sudden and i was in shock.
+she has been by my side since i was 9, and we were very close.. naturally, it took me a while to get back to my normal routine.
+my grumpy little angel now is resting in peace, and i will always love her with my whole heart <sub>🤍</sub>
+</pre>
+<br><br>
+
+<center><img width="300px" height="auto" src="https://i.imgur.com/bpTg5ww.jpg">
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i took this photo 2 years ago, while she was happily taking her usual morning sunbathe <font color="#d3a5a5" style="font-size:11px;">♡</font>
+she looks like a little kitten, don't you think ?
+so soft too .. oh how i miss her <sub>🌧</sub>
+
+i tried my best to take my time to grieve, but responsibilities get to you soon or later .. and in my case, they came FAST because i had loads of things to do for the event, and well, halloween is very precious to me so i did want to make the event no matter what.
+i spent the first weeks doing only what i wanted to do, and i focused on easy stuff that would comfort me instead of being potentially stressful.
+
+i made two new pages for the <a id="linkbjinho" href="https://dream.pooftie.me" target="_blank">dream directory</a>, for more html studies <sub>💻</sub>
+the first one i made was the <a id="linkbjinho" href="https://dream.pooftie.me/bath" target="_blank">bath</a> :</pre>
+<br><br>
+
+<center><a href="https://dream.pooftie.me/bath" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/anB8o4v.gif"></a><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i really love this page, because it's very soothing to me ..
+i can almost smell the baby soap <sub>🧴</sub>
+it has bubble sounds when you drag the soap around the screen, and then bubbles float around.
+do you find this page relaxing as well ? i hope so !
+i learned a few things while doing this, since i never really did anything with dragging objects, which is a really nice interactive feature.
+
+the other page i made was the <a id="linkbjinho" href="https://dream.pooftie.me/medicine" target="_blank">medicine</a> :</pre>
+<br><br>
+
+<center><a href="https://dream.pooftie.me/medicine" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/vEaEiX8.gif"></a><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+in this one you're taking care of this teddy bear by giving it medicine, putting bandaids on it, and giving it smoochies <sub>💕</sub>
+i love this page, it's just so cute !!
+i also experimented with new things for this, with the bandaids placement on the screen. it was very hard to do on mobile, but i think it works good enough.
+
+
+as i was going through my graphic folders to make these pages i felt inspired to make a new <a id="linkbjinho" href="https://aes.pooftie.me/xii" target="_blank">aesthetic virtual journal collage</a> :</pre>
+<br><br>
+
+<center><img width="430px" height="auto" src="https://i.imgur.com/QD73mq6.png"/></center>
+<br><br>
+<center><sub>✂️</sub> <a style="text-decoration: none;" href="https://file.pooftie.me/zip/healing%20soap.zip" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">healing soap .zip</font></a>　</center>
+<br><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i really love this, so satisfying ..
+i find watching cleaning videos very therapeutic, as well as taking a good shower or bath after a tiring day <sub>🧼</sub></pre><br>
+
+
+<center><sub>🩰</sub> <a style="text-decoration: none;" href="https://file.pooftie.me/a/trust.mp3" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">trust .mp3</font></a>　
+</center>
+
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this is the melody i used for this collage page.
+it sounds a little emotional .. it's fitting to my mood at the time <sub>🩹</sub>
+
+
+then as i was working on stuff for my game's halloween event, i also felt inspired to make <a id="linkbjinho" href="https://aes.pooftie.me/xiii" target="_blank">this another collage</a>, with a more "edgy" aesthetic, weapons & some webcore reference :
+</pre>
+<br><br>
+
+<center><img width="430px" height="auto" src="https://i.imgur.com/LESUoyE.png"/></center>
+<br><br>
+<center><sub>✂️</sub> <a style="text-decoration: none;" href="https://file.pooftie.me/zip/adorable%20virus.zip" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">adorable virus .zip</font></a>　</center>
+<br><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i included on this one some photography from one of my friends, <a id="linkbjinho" href="https://babistein.carrd.co" target="_blank">babi stein</a>, who is a super talented seamstress and has a very unique aesthetic that mixes military & delicate motifs !
+
+i really like how this collage came out .. it is always a fun experience to work with different color palettes that i don't use often, and i did that a lot this month.</pre><br>
+<center><sub>🎻</sub> <a style="text-decoration: none;" href="https://file.pooftie.me/a/forbidden.mp3" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">forbidden .mp3</font></a>　
+</center>
+
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+here i am, using another old melody for my journal pages !
+very short, but one of my favorites, since cello is my favorite instrument <sub>💗</sub>
+i hope i can go back to play it again, one day ..
+
+
+now, i would like to show you the halloween event i was working on !!
+i basically only had 2 weeks to work on everything, so it was harsh .. but i managed it somehow.
+bubu helped me a lot, as always, and together we can do anything <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+i'm also very grateful for the support i got from you fluffies, who sent me kind motivating messages, and very important bug reports too. i couldn't do it without your help !!
+thank you for being patient with me <sub>💓</sub>
+
+firstly, i'm going to show you the new laptop shop i made, the "dark mystery" :</pre>
+<br><br>
+
+<center><img width="400px" height="auto" src="https://i.imgur.com/JpM1CLu.png">
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i am absolutely in love with how this one turned out !!
+i don't really wear black, never, but i love gothic lolita ( and inspired ) clothing, and just the aesthetics in general, so i was really really excited to make a shop dedicated to this, for the longest time.
+i thought it would be fitting to wait for halloween season, and so i did <sub>🌕</sub>
+for purchasing on this shop you need "keys", a new special currency. i'm getting to that soon !
+
+before, here are some more adorable dark items i made :
+</pre>
+<br><br>
+
+<center><img width="430px" height="auto" src="https://i.imgur.com/vjl9QFT.png">
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+new home decor !!
+i tried to mix it with lots of white as well, so it fits well with the soft colors. what do you think ?
+i especially love the teddy bear .. he's a cutie <sub>💟</sub>
+
+now for the halloween event itself, i included stuff from last year + new ones.
+i made new costumes & stuffies for the fair prizes, new halloween stickers, and of course, new autumn collections for the regular clothing shops !
+( you can check more screenshots of the halloween fair on the blog's <a id="linkbjinho" href="/archive/index#halloweenevent" target="_blank">/archive</a> )
+</pre>
+<br><br>
+
+<center><img id="halloween2022" width="430px" height="auto" src="https://i.imgur.com/UVfkOA6.png">
+</img>
+        <script type = "text/javascript">
+            var imagehalloween2022 = document.getElementById("halloween2022");
+            var currentPoshalloween2022 = 0;
+            var imageshalloween2022 = ["https://i.imgur.com/UVfkOA6.png", "https://i.imgur.com/dUXYNrZ.png", "https://i.imgur.com/AdmBtEa.png", "https://i.imgur.com/QIjxaGD.png"]
+
+            function volgendefotohalloween2022() {
+                if (++currentPoshalloween2022 >= imageshalloween2022.length)
+                    currentPoshalloween2022 = 0;
+
+                imagehalloween2022.src = imageshalloween2022[currentPoshalloween2022];
+            }
+
+            setInterval(volgendefotohalloween2022, 1000);
+        </script>
+
+</center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+on the serene forest you can now find the "infinity tower", a mysterious building that is built stone by stone by the autumn wind itself.
+exploring it and interacting with the frames you get happiness and collect keys, the new currency i talked about <sub>🗝</sub>
+
+i was inspired for making this place since december last year, because of a beautiful fanart i got from <a id="linkbjinho" href="https://twitter.com/rosecarousel" target="_blank">rosecarousel</a> :</pre>
+<br><br>
+
+<center><img width="300px" height="auto" src="https://i.imgur.com/KIvjAax.jpg">
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i absolutely love all the little details on this illustration .. the frames even have some little photos from the game, can you find them ? 
+when i saw this i instantly had the idea of making a little mini game inspired on this concept, for the next autumn. here i am <sub>🎀</sub>
+
+i also had plans for releasing one more world area this autumn, but as i was in a sad mood i couldn't do it in time, so i decided to postpone it.
+it will have many new things, if i started it now and worked endlessly - with no sleep - maybe i could finish it by december, but it would already be late..
+i decided not to torture myself and use november to work on other things, since i have a big list already.
+
+the bad thing is : i don't want to wait a whole year to release this new area, even though it was supposed to be an autumn thing <sub>🍄</sub>
+hmpf, i will have to let it go and just release it whenever i finish it ; ;
+
+it's frustrating when things don't go the way we planned, but everything always turn out fine in the end, right ?
+the most important is to do our best, while respecting our mental & physical health.
+make sure to be kind to yourself too, okay ?
+
+xoxo <sub>💘</sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://middlepot.com/img/10.png"/></center><br>
+
+<br><br>
+
 <br><br>
 <center><img src="https://middlepot.com/img/6.png"/></center><br><br>
 <font size = 1><font color="#CBBBB1">
