--- a/blog.html
+++ b/blog.html
@@ -548,6 +548,7 @@ so soft too .. oh how i miss her <sub>🌧</sub>
 
 i tried my best to take my time to grieve, but responsibilities get to you soon or later .. and in my case, they came FAST because i had loads of things to do for the event, and well, halloween is very precious to me so i did want to make the event no matter what.
 i spent the first weeks doing only what i wanted to do, and i focused on easy stuff that would comfort me instead of being potentially stressful.
+basically preparing <a id="linkbjinho" href="https://shybunny.store" target="_blank">shy bunny store</a> orders, and making random web pages & collages !
 
 i made two new pages for the <a id="linkbjinho" href="https://dream.pooftie.me" target="_blank">dream directory</a>, for more html studies <sub>💻</sub>
 the first one i made was the <a id="linkbjinho" href="https://dream.pooftie.me/bath" target="_blank">bath</a> :</pre>
