--- a/blog.html
+++ b/blog.html
@@ -681,12 +681,12 @@ i made new costumes & stuffies for the fair prizes, new halloween stickers, and 
 </pre>
 <br><br>
 
-<center><img id="halloween2022" width="430px" height="auto" src="https://i.imgur.com/UVfkOA6.png">
+<center><img id="halloween2022" width="430px" height="auto" src="https://i.imgur.com/kkmpgPK.png">
 </img>
         <script type = "text/javascript">
             var imagehalloween2022 = document.getElementById("halloween2022");
             var currentPoshalloween2022 = 0;
-            var imageshalloween2022 = ["https://i.imgur.com/UVfkOA6.png", "https://i.imgur.com/dUXYNrZ.png", "https://i.imgur.com/AdmBtEa.png", "https://i.imgur.com/QIjxaGD.png"]
+            var imageshalloween2022 = ["https://i.imgur.com/kkmpgPK.png", "https://i.imgur.com/dUXYNrZ.png", "https://i.imgur.com/AdmBtEa.png", "https://i.imgur.com/QIjxaGD.png"]
 
             function volgendefotohalloween2022() {
                 if (++currentPoshalloween2022 >= imageshalloween2022.length)
