--- a/fashion.html
+++ b/fashion.html
@@ -503,7 +503,7 @@ p { margin: 0; }
 </head>
 <body>
 
-<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><sub><sub><img width="27px" height="auto" src="https://i.imgur.com/vyiriHe.png"/></sub></sub></sub></sub>　<a data-target="spoilerb1" class="btn-spoiler2">+ outfit ideas</a></font></div>
+<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><sub><sub><img width="27px" height="auto" src="https://i.imgur.com/vyiriHe.png"/></sub></sub></sub></sub>　<a data-target="spoilerb1" class="btn-spoiler2" style="padding-bottom: 2px; border-bottom:1px dotted #c6a799;">+ outfit ideas</a></font></div>
 <div id="spoilerb1" class="spoiler-area2 is-closed2">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
@@ -629,7 +629,7 @@ p { margin: 0; }
 </style>
 </head>
 <body>
-<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><sub><sub><img width="25px" height="auto" src="https://i.imgur.com/9TM1str.png"/></sub></sub></sub></sub>　<a data-target="spoilerd1" class="btn-spoiler4">+ my photos</a></font></div>
+<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><sub><sub><img width="25px" height="auto" src="https://i.imgur.com/9TM1str.png"/></sub></sub></sub></sub>　<a data-target="spoilerd1" class="btn-spoiler4" style="padding-bottom: 2px; border-bottom:1px dotted #c6a799;">+ my photos</a></font></div>
 <div id="spoilerd1" class="spoiler-area4 is-closed4">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
