--- a/pupe/20.html
+++ b/pupe/20.html
@@ -210,53 +210,50 @@ menuuuuuuuuuuuuuuu
 <sub><sub><sub><img width="auto" height="20px" src="https://file.pooftie.me/pupe/pf.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
 </font>
 
-<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf19.png">
+<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf20.png">
 
 <div style="position:absolute; top:5px; left:135px; overflow:hidden; border-style: solid; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
 <font color="#a37c81" style="font-size:8px;">
-<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf19+.png"></sub></sub></sub></sub> ‌ <b>playful vampire</b><br></font>
+<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf20+.png"></sub></sub></sub></sub> ‌ <b>bunny girl</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
- • Poisoned wine basket/11JJ
-<br>‌ • Victorian pumps/10EJ
-<br>‌ • Glitter lip gloss/12KJ
-<br>‌ • Mascara/001
-<br>‌ • Lace lolita dress/13DJ
-<br>‌ • Hair glitter/12KJ
-<br>‌ • Halloween strange wallpaper/11J
-<br>‌ • Decolletage beaty cream/11KJ
-<br>‌ • Dolly long05/12DJ
-<br>‌ • Black cat ear/11J
-<br>‌ • Glitteringly mat effect/11EJ
-<br>‌ • X'mas lingerie/wh09L
-<br>‌ • Birdcage with pumpkin/10J
-<br>‌ • Wide flooring/11IJ
-<br>‌ • Manicure/pk12KJ
-<br>‌ • Eyebrow pencil001
-<br>‌ • Mini pedicure/pk11KJ
-<br>‌ • Brilliantlyglitteringly effect/11BJ
-<br>‌ • Holiday Socks/wh12LJ
-<br>‌ • Lolita lace dress/br12LJ
-<br>‌ • Keys/10J
-<br>‌ • Crow on shoulder/10J
-<br>‌ • Black cat stick/11J
-<br>‌ • Sparkling heart cheek/or12KJ
-<br>‌ • Halloween balloons/10J
-<br>‌ • Lip gloss/pk211KJ
-<br>‌ • Vampire mantle/12JJ
-<br>‌ • Bad effect/12JJ
-<br>‌ • Color contact lens 009
-<br>‌ • Coffin and candle/12JJ
-<br>‌ • Eye glitter/11KJ
-<br>‌ • Cross Lace tights/wh13AJ<br>
+ • Glitter lip gloss/12KJ
+‌<br> • Mascara/001
+‌<br> • Goth Lolita Wallpaper/rd12LJ
+‌<br> • Heart snow flake mat/13A
+‌<br> • Hair glitter/12KJ
+‌<br> • Assault rifle/11AJ
+‌<br> • Decolletage beaty cream/11KJ
+‌<br> • Dolly long05/12DJ
+‌<br> • Victorian dress/bk10EJ
+‌<br> • Glitteringly mat effect/11EJ
+‌<br> • Black angel/10EJ
+‌<br> • Manicure/pk12KJ
+‌<br> • Eyebrow pencil001
+‌<br> • Modern flooring/11IJ
+‌<br> • Mini pedicure/pk11KJ
+‌<br> • Brilliantlyglitteringly effect/11BJ
+‌<br> • Holiday Socks/wh12LJ
+‌<br> • Black rose pumps/10LJ
+‌<br> • Angel's Heart Ribbon/12L
+‌<br> • Sparkling heart cheek/or12KJ
+‌<br> • Rabbit hood bonnet/10EJ
+‌<br> • Bridal inner for dress/13F
+‌<br> • Lip gloss/pk211KJ
+‌<br> • Bad effect/12JJ
+‌<br> • Color contact lens 009
+‌<br> • Coffin and candle/12JJ
+‌<br> • Eye glitter/11KJ
+‌<br> • Lace half pants/wh12CJ
+‌<br> • Cross Lace tights/wh13AJ<br>
 </font>
 </div>
 </div>
 
 <font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/playful%20vampire.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/18"><font color="#b08087">← previous outfit</font></a><br>
-<a href="/pupe/20"><font color="#b08087">next outfit →</font></a>
+<a href="https://file.pooftie.me/pupe/bunny%20girl.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a href="/pupe/19"><font color="#b08087">← previous outfit</font></a><br>
+<a href="/pupe/21"><font color="#b08087">next outfit →</font></a>
 </font>
 
 </body>
