--- a/pupe/21.html
+++ b/pupe/21.html
@@ -210,53 +210,51 @@ menuuuuuuuuuuuuuuu
 <sub><sub><sub><img width="auto" height="20px" src="https://file.pooftie.me/pupe/pf.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
 </font>
 
-<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf19.png">
+<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf21.png">
 
 <div style="position:absolute; top:5px; left:135px; overflow:hidden; border-style: solid; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
 <font color="#a37c81" style="font-size:8px;">
-<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf19+.png"></sub></sub></sub></sub> ‌ <b>playful vampire</b><br></font>
+<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf21+.png"></sub></sub></sub></sub> ‌ <b>candy witch</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
- • Poisoned wine basket/11JJ
-<br>‌ • Victorian pumps/10EJ
-<br>‌ • Glitter lip gloss/12KJ
+ • Glitter lip gloss/12KJ
 <br>‌ • Mascara/001
 <br>‌ • Lace lolita dress/13DJ
 <br>‌ • Hair glitter/12KJ
-<br>‌ • Halloween strange wallpaper/11J
+<br>‌ • Happy Halloween/10J
 <br>‌ • Decolletage beaty cream/11KJ
 <br>‌ • Dolly long05/12DJ
-<br>‌ • Black cat ear/11J
+<br>‌ • Magic bloom/13H
 <br>‌ • Glitteringly mat effect/11EJ
 <br>‌ • X'mas lingerie/wh09L
-<br>‌ • Birdcage with pumpkin/10J
+<br>‌ • Ribbon Frill Skirt/rd12L
 <br>‌ • Wide flooring/11IJ
 <br>‌ • Manicure/pk12KJ
 <br>‌ • Eyebrow pencil001
 <br>‌ • Mini pedicure/pk11KJ
 <br>‌ • Brilliantlyglitteringly effect/11BJ
 <br>‌ • Holiday Socks/wh12LJ
-<br>‌ • Lolita lace dress/br12LJ
-<br>‌ • Keys/10J
-<br>‌ • Crow on shoulder/10J
-<br>‌ • Black cat stick/11J
+<br>‌ • Take my head Crow/11JJ
+<br>‌ • Cake stand/br12IJ
+<br>‌ • Halloween scarecrow/10J
+<br>‌ • Fur Cape Long Coat/br12LJ
 <br>‌ • Sparkling heart cheek/or12KJ
-<br>‌ • Halloween balloons/10J
+<br>‌ • Witch hat/13H
 <br>‌ • Lip gloss/pk211KJ
-<br>‌ • Vampire mantle/12JJ
 <br>‌ • Bad effect/12JJ
+<br>‌ • Spooky Kitty/wh13BJ
 <br>‌ • Color contact lens 009
-<br>‌ • Coffin and candle/12JJ
 <br>‌ • Eye glitter/11KJ
-<br>‌ • Cross Lace tights/wh13AJ<br>
+<br>‌ • Girl's shoes/12GJ
+<br>‌ • Lazy Kitty/wh13BJ<br>
 </font>
 </div>
 </div>
 
 <font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/playful%20vampire.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/18"><font color="#b08087">← previous outfit</font></a><br>
-<a href="/pupe/20"><font color="#b08087">next outfit →</font></a>
+<a href="https://file.pooftie.me/pupe/candy%20witch.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a href="/pupe/20"><font color="#b08087">← previous outfit</font></a><br>
+<a href="/pupe/22"><font color="#b08087">next outfit →</font></a>
 </font>
 
 </body>
