--- a/about.html
+++ b/about.html
@@ -484,13 +484,53 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <center>
 <img src="https://i.imgur.com/0agDf5A.png"/></center>
 <div style="position:absolute; left:18%; right:18%;"><center>
-<font color="#d6b3b3"><a id="linkzinhoo" title="click here to see me !" data-target="spoiler1" class="btn-spoiler">i'm melissa</a></font><font color="#8e7d7d"> ・ </font><font color="#bca6a0"><a id="linkzinhoo" title="august . 11 . 1997" data-target="spoiler2" class="btn-spoiler2">i'm 25</a></font><font color="#8e7d7d"> ・ </font><font color="#d6b3b3"><a id="linkzinhoo" title="she / her" data-target="spoiler3" class="btn-spoiler3">i'm a girl</a></font><font color="#8e7d7d">  ・ </font><font color="#bca6a0"><a id="linkzinhoo" title="in a countryside small town" data-target="spoiler4" class="btn-spoiler4">i live in são paulo</a></font></center>
+<font color="#d6b3b3"><a id="linkzinhoo" title="also known as puf" data-target="spoiler1" class="btn-spoiler">i'm melissa</a></font><font color="#8e7d7d"> ・ </font><font color="#bca6a0"><a id="linkzinhoo" title="august . 11 . 1997" data-target="spoiler2" class="btn-spoiler2">i'm 25</a></font><font color="#8e7d7d"> ・ </font><font color="#d6b3b3"><a id="linkzinhoo" title="she / her" data-target="spoiler3" class="btn-spoiler3">i'm a girl</a></font><font color="#8e7d7d">  ・ </font><font color="#bca6a0"><a id="linkzinhoo" title="in a countryside small town" data-target="spoiler4" class="btn-spoiler4">i live in são paulo</a></font></center>
 
 
 <center>
 <div style="line-height:30px">
 
-<div id="spoiler2" class="spoiler-area2 is-closed2" style="margin-top:2px;">
+<div id="spoiler1" class="spoiler-area is-closed" style="margin-top:2px;">
+<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+
+<font color="#bca6a0" style="font-size:9px; letter-spacing:0.5px;">( also known as puf )</font>
+
+</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<style>
+p { margin: 0; }
+.spoiler-area {
+
+}
+.spoiler-area.is-closed { height: 0; overflow: hidden; padding: 10px 0 0; }
+</style>
+<script>
+(function(){
+    "use strict";
+    var $btns = document.querySelectorAll('.btn-spoiler');
+    function loop($els, cb) {
+        var i = $els.length;
+        while(i--) {
+            cb($els[i]);
+        }
+    }
+    loop($btns, function($btn){
+        $btn.addEventListener("click", function(){
+            var $spoiler = document.getElementById(this.getAttribute("data-target"));
+            if( this.innerHTML === "i'm melissa" ){
+                this.innerHTML = "i'm melissa ˣ";
+                $spoiler.classList.remove("is-closed");
+            } else {
+                this.innerHTML = "i'm melissa";
+                $spoiler.classList.add("is-closed");
+            }
+        });
+
+    });
+
+}());
+</script>
+
+<div id="spoiler2" class="spoiler-area2 is-closed2" style="margin-top:-10px;">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <font color="#d6b3b3" style="font-size:9px; letter-spacing:0.5px;">( august . 11 . 1997 )</font>
@@ -530,7 +570,7 @@ p { margin: 0; }
 }());
 </script>
 
-<div id="spoiler3" class="spoiler-area3 is-closed3" style="margin-top:-6px;">
+<div id="spoiler3" class="spoiler-area3 is-closed3" style="margin-top:-10px;">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <font color="#bca6a0" style="font-size:9px; letter-spacing:0.5px;">( she / her )</font>
@@ -570,7 +610,7 @@ p { margin: 0; }
 }());
 </script>
 
-<div id="spoiler4" class="spoiler-area4 is-closed4" style="margin-top:-7px;">
+<div id="spoiler4" class="spoiler-area4 is-closed4" style="margin-top:-10px;">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <font color="#d6b3b3" style="font-size:9px; letter-spacing:0.5px;">( in a countryside small town )</font>
@@ -602,46 +642,6 @@ p { margin: 0; }
             } else {
                 this.innerHTML = "i live in são paulo";
                 $spoiler.classList.add("is-closed4");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-<div id="spoiler1" class="spoiler-area is-closed" style="margin-top:-16px;">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<img width="350" height="auto" src="https://i.imgur.com/7n9QNeA.jpg"/>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area {
-
-}
-.spoiler-area.is-closed { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "i'm melissa" ){
-                this.innerHTML = "i'm melissa ˣ";
-                $spoiler.classList.remove("is-closed");
-            } else {
-                this.innerHTML = "i'm melissa";
-                $spoiler.classList.add("is-closed");
             }
         });
 
