--- a/fashion.html
+++ b/fashion.html
@@ -66,6 +66,16 @@ background-color: #f9f0ed;
 -webkit-border-radius: 0ex;
 border: 1px dotted #e2d5d0;
 }
+.stuff::-webkit-scrollbar {
+width: 4px;
+height: 4px;
+background: transparent;
+}
+.stuff::-webkit-scrollbar-thumb {
+background-color: #f7f1ed;
+-webkit-border-radius: 0ex;
+border: 1px dotted #baa8a0;
+}
 #linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
 #linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
 #linkzinhoo { padding-bottom: 2px; border-bottom:1px dotted #e8c1c5; }</style>
@@ -220,7 +230,7 @@ attribute:"title"
     position: relative;
 }
 #s-m-t-tooltip {
-max-width:300px; /*how big the tooltip can be at most*/
+max-width:280px; /*how big the tooltip can be at most*/
 border-radius: 0px; /*change your border radius*/
 padding:3px 4px 5px 4px; /*padding inside tooltip*/
 margin:10px 7px -2px 10px; /*distance from word*/
@@ -479,279 +489,113 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 
 <div id="stuff">
 
-<div style="background-image:url(https://i.imgur.com/tplfnY7.png); width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; overflow: auto; overflow: scroll; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 100%">
+<div style="background-image:url(https://i.imgur.com/tplfnY7.png); width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; overflow: auto; overflow: scroll; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 100%;">
 
 <div style="background-image:url(https://i.imgur.com/Bv01fJj.png); background-size: auto 25px; background-repeat: repeat-x; width: 590px; height: 30px; overflow-x: hidden; overflow-y: hidden;"></div>
 
-<div style= "overflow: auto; overflow: scroll; padding-left: 25%; padding-right: 25%;">
 
-<br><br>
-<center><img width="100px" height="auto" src="https://i.imgur.com/DT89Pu8.png"></center>
-<br><center><font color="#C1B1A9">the place where i share my passion for frills & lace</font>
-<br><br><br><br><br>
+<div style="position: absolute; left:70px; top:66px; overflow-x: hidden; overflow-y: hidden; z-index: 10;">
+<img src="https://i.imgur.com/GLNlfLx.png">
+</div>
 
-<img width="auto" height="8px" src="https://i.imgur.com/uJlLZpB.png">
-<br><br><br><br>
+<div style= "overflow: auto; overflow: scroll;">
+<center><table>
+<tr><th><img width="30px" height="auto" src="https://i.imgur.com/ceWeVku.png"> ‌ </th>
+<th><font color="#a88e88" style="font-size:8px; font-weight:normal;">please feel free to scroll through this photo album,<br>
+and get a glimpse of my passion for frills & lace</font></th>
+</tr>
+</table></center>
 
-<style>
-p { margin: 0; }
-.spoiler-area2 {
-
-}
-.spoiler-area2.is-closed2 { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-</head>
-<body>
-
-<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><sub><sub><img width="27px" height="auto" src="https://i.imgur.com/vyiriHe.png"/></sub></sub></sub></sub>　<a data-target="spoilerb1" class="btn-spoiler2" style="padding-bottom: 2px; border-bottom:1px dotted #c6a799;">+ outfit ideas</a></font></div>
-<div id="spoilerb1" class="spoiler-area2 is-closed2">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-
-<div style="font-family: Verdana; font-size:8px;"><font color="#B49797">
-<br><br>
-( <a href="https://file.pooftie.me/f"target="_blank"><font color="#bca6a0">archive</font></a> )
-<br>
-
-
-<br>
+<div style="padding-left: 100px; padding-top: 12px;">
+<div class="stuff" style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 400px; height: 308px; overflow-x: hidden; overflow: auto; overflow: scroll; z-index: 30; text-align:justify; line-height: 10px;">
 <center>
-
-
-<br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 02.14.21 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/soSzOLw.png"/><br>
 <br>
-
-
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 10.04.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/Dy86cQI.png"/><br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/0.jpg"/><br><br>
 <br>
-
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 08.07.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/H6swcGe.png"/><br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/1.jpg"/><br><br>
 <br>
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 07.02.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/nOZImYH.png"/><br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/2.jpg"/><br><br>
 <br>
-
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 06.08.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/dPHLbCK.png"/><br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/4.jpg"/><br><br>
 <br>
-
-
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 04.20.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/AlIxJOV.png"/><br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/5.jpg"/><br><br>
 <br>
-
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 04.01.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/HDPtXJm.png"/><br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/6.jpg"/><br><br>
 <br>
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 02.13.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/Kb7ScMx.png"/><br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/7.jpg"/><br><br>
 <br>
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 01.16.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/1Pqc51k.png"/><br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/8.jpg"/><br><br>
 <br>
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 12.10.19 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/egwFwwo.png"/><br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/9.jpg"/><br><br>
 <br>
-
-
-
-<br><br>
-
+<img width="280px" height="auto" src="https://file.pooftie.me/f/10.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/11.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/12.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/013.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/13.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/014.png"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/14.png"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/15.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/16.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/17.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/18.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/19.png"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/20.png"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/21.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/22.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/23.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/24.png"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/25.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/26.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/27.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/28.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/29.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/30.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/31.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/32.png"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/33.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/34.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/35.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/36.png"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/37.jpg"/>
 
 </center>
 
-<br><br>
-
-</font></div>
-
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-
-<script>
-(function(){
-    "use strict";
-    var $btnsb = document.querySelectorAll('.btn-spoiler2');
-    function loop($elsb, cb2) {
-        var ib = $elsb.length;
-        while(ib--) {
-            cb2($elsb[ib]);
-        }
-    }
-    loop($btnsb, function($btnb){
-        $btnb.addEventListener("click", function(){
-            var $spoilerb = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "+ outfit ideas" ){
-                this.innerHTML = "- outfit ideas";
-                $spoilerb.classList.remove("is-closed2");
-            } else {
-                this.innerHTML = "+ outfit ideas";
-                $spoilerb.classList.add("is-closed2");
-            }
-        });
-
-    });
-
-}());
-</script>
 <br>
 
 
-
-
-
-
-<style>
-p { margin: 0; }
-.spoiler-area4 {
-
-}
-.spoiler-area4.is-closed4 { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-</head>
-<body>
-<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><sub><sub><img width="25px" height="auto" src="https://i.imgur.com/9TM1str.png"/></sub></sub></sub></sub>　<a data-target="spoilerd1" class="btn-spoiler4" style="padding-bottom: 2px; border-bottom:1px dotted #c6a799;">+ my photos</a></font></div>
-<div id="spoilerd1" class="spoiler-area4 is-closed4">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-
-<br><br>
-<br>
-
-<img width="300px" height="auto" src="https://file.pooftie.me/f/0.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/01.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/1.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/02.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/2.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/04.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/4.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/5.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/6.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/07.png"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/7.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/0008.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/008.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/08.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/8.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/00009.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/0009.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/009.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/09.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/9.png"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/010.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/10.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/0011.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/011.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/11.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/012.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/12.png"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/013.png"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/13.png"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/14.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/14.png"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/00015.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/0015.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/015.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/15.png"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/16.jpg"/><br><br>
-<br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/17.jpg"/><br><br>
-<br>
-
-<br><br>
-
-
-</font></div>
-
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-
-<script>
-(function(){
-    "use strict";
-    var $btnsd = document.querySelectorAll('.btn-spoiler4');
-    function loop($elsd, cbd) {
-        var ir = $elsd.length;
-        while(ir--) {
-            cbd($elsd[ir]);
-        }
-    }
-    loop($btnsd, function($btnd){
-        $btnd.addEventListener("click", function(){
-            var $spoilerd = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "+ my photos" ){
-                this.innerHTML = "- my photos";
-                $spoilerd.classList.remove("is-closed4");
-            } else {
-                this.innerHTML = "+ my photos";
-                $spoilerd.classList.add("is-closed4");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-<br><br>
-<center><img width="auto" height="8px" src="https://i.imgur.com/uJlLZpB.png"></center>
-<br><br><br>
-</center>
-<br><br>
-<br><br>
-<div style="background-image:url(https://i.imgur.com/X2FOtiR.png); background-size: auto 25px; background-repeat: repeat-x; width: 590px; height: 30px; overflow-x: hidden; overflow-y: hidden;"></div>
+</div>
+</div>
+</div>
 
 </div>
 
