--- a/credits.html
+++ b/credits.html
@@ -340,6 +340,16 @@ position: absolute;
 overflow-y:hidden;
 overflow-x:hidden;
  }
+#base2 {
+position: absolute;
+	left: 13%;
+	top: 10%;
+width: 935px;
+height: 540px;
+overflow-y:hidden;
+overflow-x:hidden;
+z-index: 5;
+ }
 #menu1 {
 position: absolute;
 	left: %;
@@ -348,7 +358,7 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 8;
  }
 #menu1-2 {
 position: absolute;
@@ -358,7 +368,7 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 9;
  }
 #menu2 {
 position: absolute;
@@ -368,7 +378,7 @@ width: 560px;
 height: 35px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 4;
+z-index: 10;
  }
 #menu3 {
 position: absolute;
@@ -378,7 +388,7 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 11;
  }
 #stuff {
 position: absolute;
@@ -387,7 +397,7 @@ position: absolute;
 width: 594px;
 height: 433px;
 overflow-x:hidden;
-z-index: 6;
+z-index: 10;
  }
 #aaa {
 position: absolute;
@@ -396,7 +406,7 @@ position: absolute;
 width: 100px;
 height: 100px;
 overflow-x:hidden;
-z-index: 3;
+z-index: 11;
  }
 
 @supports not (-webkit-touch-callout: none) {
@@ -477,28 +487,14 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <div id="menu3">
 <br><br>
 　　　　　 <a href="/blog" style="text-decoration: none; color:#b29487;">my blog</a>
-</div>
+</div></div>
 
+<div id="base2">
 <div id="stuff">
 
-<br><br>
+<br>
 
 <div style="position: absolute; left:10%; right:10%;">
-<font family = "Verdana"><font color="#ddb5b5"><font size="1">
-　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;please, read this :<br><br></font>
-<font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
-this page is currently being used for crediting platforms i'm using for hosting my content.<br>
-at the moment, when it comes to my projects, i am only making use of content that is either made entirely by me, highly edited by me ( using multiple references for achieving the final result ), that fit into public use or are copyright free ( such as the image of common objects, nature, food or clothing ). when it comes to content not made by me, i make sure to keep it as fair use & personal use only.<br>
-i seek transparency and respect the work of others, so i value giving credit as something important. if i ever use the work of someone else, i will credit them on the work itself. i think this is a better way to properly credit someone, instead of putting them here, on my least visited page.<br>
-if i made use of your content and you'd like credits, please do not hesitate to contact me. i am always willing to properly credit and even delete someone's content, if that person so wishes !<br><br>
-though please keep in mind that it is inevitably difficult to give credits appropriately and correctly when searching for content on repost platforms sites like pinterest, tumblr, google images, we heart it, or even some old web archived sites. to avoid crediting to the wrong person, i simply don't do so if i'm not completely sure of who owns the content.<br>
-unfortunately, fake sources are very common, and i don't want to spread misinformation and lies, as this can cause even worse problems than just the absence of a source. nonetheless, i try to make sure i am making fair use of the content according to the intentions of each project i work on.<br>
-again : a lot of the content i produce is made from scratch by me, but a lot of it is only edited or partially made by me. i try to be as clear as possible about it, but if you have any questions or think i'm not being clear enough, please contact me and i will try to explain exactly how was the process of finding the content, editing and so on.<br>
-it is difficult to be completely transparent about how much content is edited or not, especially without having the base content as a reference. content is often edited beforehand when reposted. nonetheless, i try my best not to cause problems for other artists !
-<br>
-</font></font></font></font>
-<br><br><br>
-
 <font family = "Verdana"><font color="#ddb5b5"><font style="font-size:10px">　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;hosting sites that i currently use for my files :</font></font></font><br><br><div style="line-height:20px;">
 <font family = "Verdana"><font color="#AD9F97"><font style="font-size:9px">
 　　　　<a id="linkbjinho" href="https://file.pooftie.me" target="_blank">file.pooftie.me</a>　<font color="#ccb6b6">( my closed archive )</font><br>
@@ -511,8 +507,29 @@ it is difficult to be completely transparent about how much content is edited or
 ※ i try to keep most of my stuff hosted in my own server.<br>
 ※ when i use third-party services i choose only safe and encrypted sites.<br>
 ※ i will update this list whenever i change a hosting.<br>
-</font></font></font><br><br><br><br>
+</font></font></font>
+<br><br>
+<a name="readme" id="readme"></a><br>
+
+<font family = "Verdana"><font color="#ddb5b5"><font size="1">
+　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;please, read this :<br><br></font>
+<font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
+at the moment, when it comes to my projects, i am only making use of content that is either made entirely by me, heavily edited by me ( using multiple references for achieving the final result ), that fit into public use / are copyright free ( such as photography of common objects, nature, food or clothing ). when it comes to content not made by me, i make sure to keep it as fair use or personal use only, by creating new pieces for my projects, thus, having full rights towards my new original pieces.<br>
+i seek transparency and respect the work of others, so i value giving credit as something important. when i use the work of someone else - and i am completely sure of who owns it - i credit them on the work itself. i think this is a better way to properly credit someone, instead of putting them here, on my least visited page.<br><br>
+
+if i made use of your content and you'd like credits, do not hesitate to contact me. i am always willing to properly credit and even remove someone's content, if copyright rights apply, and if i am using it in its integrity. if i have edited the original piece, or used it to make new and original content, it would then be considered fair use.<br>
+please note : images that have been only edited by you ( such as removing background, adding a few details, or filters ) or photography of common objects, nature, food or clothing, fit into public use / are copyright free, therefore, retains the right to be used by any person under fair use.<br>
+because of that, i also refrain from asking for credits of my own content unless it has been made by me in its integrity. for example : photographs that i took of myself, or of my own crafts ( not common items that i bought ).<br>
+thank you for your patience !<br><br>
+
+please keep in mind that it is inevitably difficult to give credits appropriately and correctly when searching for content on repost platforms sites like pinterest, tumblr, google images, we heart it, or even some old web archived sites. to avoid crediting to the wrong person, i simply don't do so if i'm not completely sure of who owns the content.<br>
+unfortunately, fake sources are very common, and i don't want to spread misinformation and lies, as this can cause even worse problems than just the absence of a source. nonetheless, i try to make sure i am making fair use of the content according to the intentions of each project i work on.<br>
+again : a lot of the content i produce is made from scratch by me, but a lot of it is only edited or partially made by me. i try to be as clear as possible about it, but if you have any questions or think i'm not being clear enough, please contact me and i will try to explain exactly how was the process of finding the content, editing and so on.<br>
+it is difficult to be completely transparent about how much content is edited or not, especially without having the base content as a reference. content is often edited beforehand when reposted. nonetheless, i try my best not to cause problems for other artists !
 <br>
+</font></font></font></font>
+<br><br><br>
+
 <font family = "Verdana"><font color="#ddb5b5"><font size="1">
 　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;important privacy policy :<br><br></font>
 <font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
@@ -525,15 +542,15 @@ keeping internet accessible and safe is important to me, so i only charge for se
 the content you see here is run by a real person with real interests, spontaneously, and any disclosures are made with the emphasis on genuinely supporting the work of other people, without getting anything in return.<br>
 i respect people's comfort and well-being deeply, so please be assured that on my end i will NEVER use or let third parties use your data for any of these malicious, greedy, exploiting and annoying intentions.<br>
 people aren't numbers, and i care about standing by what i believe in and trying my best to do something good for the world. profiting from the discomfort of others is not okay.<br>
-<br><br><br>
+<br><br>
+
 </font></font></font></font>
 <font family = "Verdana"><font color="#ddb5b5"><font size="1"><br><br>
 　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;important accessibility tips :<br><br></font>
 <font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
-if you're on pc and you think the font size is too small please zoom in a little in your browser !<br>
-usually any font bigger than 10px is uncomfortable for me to read. i keep most websites 75% zoom out because of it.. i would like to make my website accessible for everyone, but i believe it should be accessible for myself first, i'm sorry ; ;<br>
-if the font colors seem too light for you to read i believe a little of zoom in and screen brightness adjust can help ! i can't really change the font colors because it would ruin the whole aesthetic of the website... again, i'm sorry.<br>
-i try to make my layouts compatible for all screen sizes but it's a little hard to do it with image based layouts, like mine. if you're on a mobile device you should be seeing this website horizontally for better compatibility !!<br>
+if you're on pc and you think the font size is hard to read, please zoom in and adjust the screen brightness of your browser !<br>
+usually any font bigger than 10px is uncomfortable for me to read. i keep most websites 75% zoom out because of it.. i would like to make my website accessible for everyone, but i believe it should be accessible for myself first.<br>
+i try to make my layouts compatible for all screen sizes but it's a little hard to do it with image based layouts, like mine. if you're on a mobile device you should be seeing this website horizontally for better compatibility !<br>
 thank you for your patience.<br><br>
 </font></font></font></font>
 <font family = "Verdana"><font color="#ddb5b5"><font size="1"><br><br><br>
@@ -544,7 +561,6 @@ my website has links to sites from other people, which, in my view, may contain 
 i am not responsible for the content present in those sites, but i do care about them, so please contact me if you find issues.<br><br>
 it is recommended that you consult this page regularly in order to continually update !<br>
 </font></font></font></font>
-<br><br>
 
 <br><br>
 </div>
