--- a/credits.html
+++ b/credits.html
@@ -519,7 +519,7 @@ i seek transparency and respect the work of others, so i value giving credit as 
 
 if i made use of your content and you'd like credits, do not hesitate to contact me. i am always willing to properly credit and even remove someone's content, if copyright rights apply, and if i am using it in its integrity. if i have edited the original piece, or used it to make new and original content, it would then be considered fair use.<br>
 please note : images that have been only edited by you ( such as removing background, adding a few details, or filters ) or photography of common objects, nature, food or clothing, fit into public use / are copyright free, therefore, retains the right to be used by any person under fair use.<br>
-because of that, i also refrain from asking for credits of my own content unless it has been made by me in its integrity. for example : photographs that i took of myself, or of my own crafts ( not common items that i bought ).<br>
+because of that, i also refrain from asking for credits of my own content unless it has been made by me in its integrity. for example : photographs that i took of myself, or of my own crafts ( not items that i bought, made by other people ).<br>
 thank you for your patience !<br><br>
 
 please keep in mind that it is inevitably difficult to give credits appropriately and correctly when searching for content on repost platforms sites like pinterest, tumblr, google images, we heart it, or even some old web archived sites. to avoid crediting to the wrong person, i simply don't do so if i'm not completely sure of who owns the content.<br>
