--- a/contact.html
+++ b/contact.html
@@ -328,7 +328,7 @@ menuuuuuuuuuuuuuuu
 </head>
 
 
-<body ondragstart="return false" style="background-image:url(https://i.imgur.com/s0V8ydU.png); background-repeat: no-repeat; background-size: cover; background-color:#fefbfb; font-family: Verdana; font-size: 10px;">
+<body ondragstart="return false" style="background-image:url(https://i.imgur.com/s0V8ydU.png); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;  background-color:#fefbfb; font-family: Verdana; font-size: 10px;">
 <style>
 html {
     -webkit-text-size-adjust: 100%;
